--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
         <meta charset="utf-8">
-        <title>희진포트폴리오</title>
+        <title>희진포트폴리오_inflearn</title>
         <link href="css/reset.css" rel="stylesheet"
         type="text/css"/>
         <link href="css/style.css" rel="stylesheet"
