--- a/index.html
+++ b/index.html
@@ -2,65 +2,75 @@
 <html>
    <head>
         <meta charset="utf-8">
-        <title>희진포트폴리오_inflearn</title>
+        <title>심플포트폴리오</title>
         <link href="css/reset.css" rel="stylesheet"
         type="text/css"/>
         <link href="css/style.css" rel="stylesheet"
-        type="text/css"/>     
+        type="text/css"/>  
         <script src="js/jquery.1.12.4.js"
         type="text/javascript"></script>
-        <script
-        src="plugins/bxslider/js/jquery.bxslider.js"
-        type="text/javascript"></script>   
+        <link rel="stylesheet" 
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
         <link href="plugins/web-fonts-with-css/css/all.css" 
         rel="stylesheet" type="text/css">
-        <link rel="preconnect" href="https://fonts.gstatic.com"> 
-        <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" 
-        rel="stylesheet">
-        <script>
-            $(document).ready(function(){
-              $('.slider').bxSlider({
-                  controls: false,
-                  pager: false,
-                  auto: true
-              });
-            });
-          </script>
+        
     </head>
     <body>
-        <div class="overlay"></div>
-        <div class="slider">
-            <div class="background__01"></div>
-            <div class="background__02"></div>
-            <div class="background__03"></div>
+        <div id = "mysidenav" class="sidenav">
+            <a href="#" class="closebtn" onclick='closeNav()'>
+                <i class="fas fa-chevron-right"></i>
+            </a>
+            <a href="#"><br><br>Home</a>
+            <a href="#">About Me</a>
+            <a href="#">Project</a>
+            <a href="#">Contact</a>
         </div>
-        <div class="contents">
-            <p class="contents__name">Jang, Hee Jin</p>
-            <p class="contents__job">Student & Programmer</p>
-            <div class="contents__sns">
-                <ul class="contents__list">
-                    <li>
-                        <a href="https://github.com/heejin99" target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/h_jin_ooo/" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://heejin99.github.io" target="_blank">
-                            <i class="fab fa-blogger-b"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:wkdgmlwls30@naver.com">
-                            <i class="far fa-envelope"></i>
-                        </a>
-                    </li>
-                </ul>
+        <span class="openmenu" onclick='openNav()'>
+            <i class="fas fa-bars"></i>
+        </span>
+
+        <div class="content">
+            <div class="cnt01">
+                <h1 class="strip">
+                    This is<br>
+                    Hee Jin<br>
+                    Portfolio
+                </h1>
+            </div>
+            <div class="cnt02">
+                <h2>
+                    About Me
+                </h2>
+                <p>
+                    안녕하세요 저는 풀스택 개발자가 되고 싶은 장희진입니다.
+                    <br>
+                    현재 상명대학교 컴퓨터과학과에 재학 중이며 백엔드와 프론트엔드 개발에 관심이 많습니다.
+                    <br>
+                    웹과 앱 개발에 중점을 두고 다양한 프로젝트 경험을 쌓기 위해 개발에 관련한 내용을 공부하고 있습니다.
+                    <br>
+                    Git을 이용해 다양한 프로젝트와 공부했던 내용을 올리고 있습니다. 
+                </p>
+                <h3>
+                    Skills
+                </h3>
+                <h4>
+                    javascript
+                </h4>
+                <div class="container">
+                    <div class="skills javascript">76.4%</div>
+                </div>
+                <h4>
+                    html
+                </h4>
+                <div class="container">
+                    <div class="skills html">11.9%</div>
+                </div>
             </div>
         </div>
+        <script src="js/ani.js" type="text/javascript"></script>
+        <script src="js/jquery.lettering.js" type="text/javascript"></script>
+        <script src="js/gsap.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     </body>
 </html>
